--- a/style.css
+++ b/style.css
@@ -3,6 +3,13 @@ body {
     box-sizing: border-box;
     background-image: url("https://static0.gamerantimages.com/wordpress/wp-content/uploads/2020/10/Dark-Souls-Dark-Sign.jpg");
     font-family: 'Changa', sans-serif;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    display: table;
+    width: 100%;
+    height: 100vh;
+    background-position: 30% 45%;
+    background-size: cover;
 }
 
 .container {
